[package]
name = "bacnet-codec"
description = "BACnet PDU serialization (BVLL, NPDU, APDU, MS/TP, SC frames)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bacnet-types = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = "1"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "codec_bench"
harness = false
