[package]
name = "bacnet-transport"
description = "Async BACnet transport: BACnet/IP (UDP+BVLL), MS/TP, and BACnet/SC (WebSocket+TLS)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bacnet-types = { workspace = true }
bacnet-codec = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-serial = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
