[package]
name = "bacnet-types"
description = "Pure BACnet data types, enums, and ASN.1 encoding — no I/O"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
thiserror = "1"
